ADD: Dashboard with simple Inventory tab
	* Frontend
		- Create Sidebar, Dashboard, and Inventory pages
		- Add needed components
	* Backend
		- Create migrations for Albums, Genres, Artists,
		  Products, and Album/Genres.
		- Create Models for corresponding Migrations.
		- Create Factories for corresponding Models.
		- Update Database seeder to include some products.
		- Add controller to retrieve inventory

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -58,10 +58,10 @@
   --secondary-foreground: oklch(0.21 0.006 285.885);
   --tertiary: oklch(40.64% 0.21149 288.57);
   --tertiary-foreground: oklch(0.21 0.006 285.885);
-  --muted: oklch(0.967 0.001 286.375);
+  --muted: oklch(93.643% 0.00666 97.461);
   --muted-foreground: oklch(0.552 0.016 285.938);
   --accent: oklch(42.131% 0.25322 273.383);
-  --accent-foreground: oklch(0.21 0.006 285.885);
+  --accent-foreground: oklch(93.906% 0.00948 286.056);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.92 0.004 286.32);
   --input: oklch(0.92 0.004 286.32);
