FEAT: Products can be added from Inventory
 - Backend
	* Updated `InventoryController` to insert values
	* Inventory is rendered through the controller with props.
 - Frontend
	* Updated `admin/inventory`
	* Create `create.tsx` to add a new product/artist/album
	* Create routes for POST inventory

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -48,15 +48,15 @@
   --radius: 0.65rem;
   --background: #fbfaf2;
   --foreground: oklch(25.893% 0.0127 100.551);
-  --card: oklch(1 0 0);
+  --card: oklch(99.702% 0.0143 106.785);
   --card-foreground: oklch(0.141 0.005 285.823);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.141 0.005 285.823);
-  --primary: oklch(41.682% 0.19552 264.574);
+  --popover: oklch(99.181% 0.01836 100.175);
+  --popover-foreground: oklch(21.929% 0.01491 107.602);
+  --primary: oklch(39.601% 0.21696 263.708);
   --primary-foreground: oklch(0.97 0.014 254.604);
-  --secondary: oklch(44.197% 0.12575 258.504);
+  --secondary: oklch(41.258% 0.17041 260.238);
   --secondary-foreground: oklch(0.21 0.006 285.885);
-  --tertiary: oklch(40.64% 0.21149 288.57);
+  --tertiary: oklch(37.118% 0.22031 282.756);
   --tertiary-foreground: oklch(0.21 0.006 285.885);
   --muted: oklch(93.643% 0.00666 97.461);
   --muted-foreground: oklch(0.552 0.016 285.938);
