UPDATE: home and admin inventory update
 - Backend
	* `InventoryController` include updates products
	* Change route logout to any user authenticated
 - Frontedn
	* Home page initialized
	* Inventory update page created
	* Admin include description specification
	* Sidebar update
	* Storage now is unlocked and saves pages

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -55,7 +55,7 @@
   --primary: oklch(39.601% 0.21696 263.708);
   --primary-foreground: oklch(0.97 0.014 254.604);
   --secondary: oklch(41.258% 0.17041 260.238);
-  --secondary-foreground: oklch(0.21 0.006 285.885);
+  --secondary-foreground: oklch(94.696% 0.00411 285.935);
   --tertiary: oklch(37.118% 0.22031 282.756);
   --tertiary-foreground: oklch(0.21 0.006 285.885);
   --muted: oklch(93.643% 0.00666 97.461);
